--- a/results.html
+++ b/results.html
@@ -35,6 +35,17 @@
 
         .hidden-view { display: none; }
     </style>
+    <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:6573027,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body class="p-4 md:p-8">
     <div class="max-w-6xl mx-auto space-y-8">
