--- a/energy.html
+++ b/energy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Energy Map (Research Tool)</title>
+    <title>Energy Map (Research Tool) - Deploy Test</title>
     <style>
         /* Base styles for screen */
         body {
