--- a/simulator.html
+++ b/simulator.html
@@ -30,15 +30,11 @@
         .step-indicator.active { color: #1d4ed8; }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:6573027,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    <script type="module">
+        import Hotjar from 'https://cdn.jsdelivr.net/npm/@hotjar/browser@1.0.0/dist/index.js';
+        const siteId = 6573027;
+        const hotjarVersion = 6;
+        Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
 <body class="p-8">
