Add professional stock photos to testimonials section
- Replace avatar initials with real person photos from Unsplash
- Add circular images with white ring and shadow effects
- Optimize images for 200x200px with face crop
- Improve visual appeal of testimonials section

--- a/index.html
+++ b/index.html
@@ -91,32 +91,32 @@
             </p>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
                 <div class="text-center card-hover p-6 rounded-2xl bg-gradient-to-br from-indigo-50 to-purple-50">
-                    <div class="w-20 h-20 avatar-gradient rounded-full mx-auto mb-4 flex items-center justify-center text-white text-2xl font-bold">
-                        LL
+                    <div class="w-20 h-20 rounded-full mx-auto mb-4 overflow-hidden ring-4 ring-white shadow-lg">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop&crop=faces" alt="Luis L." class="w-full h-full object-cover">
                     </div>
                     <p class="font-semibold text-gray-900 mb-1">Luis L.</p>
                     <p class="text-sm text-gray-600">MBA SMU, 2024</p>
                     <p class="text-xs text-gray-500 mt-2">Madrid, Spain</p>
                 </div>
                 <div class="text-center card-hover p-6 rounded-2xl bg-gradient-to-br from-blue-50 to-indigo-50">
-                    <div class="w-20 h-20 avatar-gradient rounded-full mx-auto mb-4 flex items-center justify-center text-white text-2xl font-bold">
-                        CV
+                    <div class="w-20 h-20 rounded-full mx-auto mb-4 overflow-hidden ring-4 ring-white shadow-lg">
+                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=200&h=200&fit=crop&crop=faces" alt="Carlos V." class="w-full h-full object-cover">
                     </div>
                     <p class="font-semibold text-gray-900 mb-1">Carlos V.</p>
                     <p class="text-sm text-gray-600">MBA ESADE, 2023</p>
                     <p class="text-xs text-gray-500 mt-2">Barcelona, Spain</p>
                 </div>
                 <div class="text-center card-hover p-6 rounded-2xl bg-gradient-to-br from-purple-50 to-pink-50">
-                    <div class="w-20 h-20 avatar-gradient rounded-full mx-auto mb-4 flex items-center justify-center text-white text-2xl font-bold">
-                        AG
+                    <div class="w-20 h-20 rounded-full mx-auto mb-4 overflow-hidden ring-4 ring-white shadow-lg">
+                        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=200&h=200&fit=crop&crop=faces" alt="Ana G." class="w-full h-full object-cover">
                     </div>
                     <p class="font-semibold text-gray-900 mb-1">Ana G.</p>
                     <p class="text-sm text-gray-600">MSc LSE, 2024</p>
                     <p class="text-xs text-gray-500 mt-2">London, UK</p>
                 </div>
                 <div class="text-center card-hover p-6 rounded-2xl bg-gradient-to-br from-indigo-50 to-blue-50">
-                    <div class="w-20 h-20 avatar-gradient rounded-full mx-auto mb-4 flex items-center justify-center text-white text-2xl font-bold">
-                        SR
+                    <div class="w-20 h-20 rounded-full mx-auto mb-4 overflow-hidden ring-4 ring-white shadow-lg">
+                        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=200&h=200&fit=crop&crop=faces" alt="Sofia R." class="w-full h-full object-cover">
                     </div>
                     <p class="font-semibold text-gray-900 mb-1">Sofia R.</p>
                     <p class="text-sm text-gray-600">LL.M. Columbia, 2023</p>
