Install @hotjar/browser locally and update all HTML files to use local version
- Install @hotjar/browser package via npm
- Copy hotjar.js to public js/ folder
- Update all HTML files to import from ./js/hotjar.js instead of CDN
- Use siteId 6573027 and hotjarVersion 6 as specified

--- a/checkout.html
+++ b/checkout.html
@@ -42,7 +42,7 @@
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
     <script type="module">
-        import Hotjar from 'https://cdn.jsdelivr.net/npm/@hotjar/browser@1.0.0/dist/index.js';
+        import Hotjar from './js/hotjar.js';
         const siteId = 6573027;
         const hotjarVersion = 6;
         Hotjar.init(siteId, hotjarVersion);
