Sort countries list alphabetically by name

--- a/simulator.html
+++ b/simulator.html
@@ -303,35 +303,35 @@
             window.selectedUniversity = null;
             window.selectedProgram = null;
             
-            // Countries database (25-30 top countries)
+            // Countries database (25-30 top countries) - sorted alphabetically
             const countries = [
-                { code: 'US', name: 'United States', livingCost: 1500 },
-                { code: 'UK', name: 'United Kingdom', livingCost: 1400 },
-                { code: 'CA', name: 'Canada', livingCost: 1200 },
+                { code: 'AR', name: 'Argentina', livingCost: 600 },
                 { code: 'AU', name: 'Australia', livingCost: 1300 },
-                { code: 'NZ', name: 'New Zealand', livingCost: 1100 },
-                { code: 'DE', name: 'Germany', livingCost: 1000 },
-                { code: 'FR', name: 'France', livingCost: 1200 },
-                { code: 'ES', name: 'Spain', livingCost: 900 },
-                { code: 'IT', name: 'Italy', livingCost: 950 },
-                { code: 'NL', name: 'Netherlands', livingCost: 1100 },
-                { code: 'CH', name: 'Switzerland', livingCost: 1600 },
-                { code: 'SE', name: 'Sweden', livingCost: 1200 },
-                { code: 'NO', name: 'Norway', livingCost: 1400 },
+                { code: 'AT', name: 'Austria', livingCost: 1000 },
+                { code: 'BE', name: 'Belgium', livingCost: 1050 },
+                { code: 'BR', name: 'Brazil', livingCost: 650 },
+                { code: 'CA', name: 'Canada', livingCost: 1200 },
+                { code: 'CN', name: 'China', livingCost: 800 },
                 { code: 'DK', name: 'Denmark', livingCost: 1300 },
                 { code: 'FI', name: 'Finland', livingCost: 1100 },
-                { code: 'BE', name: 'Belgium', livingCost: 1050 },
-                { code: 'AT', name: 'Austria', livingCost: 1000 },
-                { code: 'IE', name: 'Ireland', livingCost: 1250 },
-                { code: 'PT', name: 'Portugal', livingCost: 850 },
-                { code: 'MX', name: 'Mexico', livingCost: 700 },
-                { code: 'BR', name: 'Brazil', livingCost: 650 },
-                { code: 'AR', name: 'Argentina', livingCost: 600 },
-                { code: 'JP', name: 'Japan', livingCost: 1300 },
-                { code: 'CN', name: 'China', livingCost: 800 },
+                { code: 'FR', name: 'France', livingCost: 1200 },
+                { code: 'DE', name: 'Germany', livingCost: 1000 },
                 { code: 'HK', name: 'Hong Kong', livingCost: 1500 },
+                { code: 'IE', name: 'Ireland', livingCost: 1250 },
+                { code: 'IT', name: 'Italy', livingCost: 950 },
+                { code: 'JP', name: 'Japan', livingCost: 1300 },
+                { code: 'MX', name: 'Mexico', livingCost: 700 },
+                { code: 'NL', name: 'Netherlands', livingCost: 1100 },
+                { code: 'NZ', name: 'New Zealand', livingCost: 1100 },
+                { code: 'NO', name: 'Norway', livingCost: 1400 },
+                { code: 'PT', name: 'Portugal', livingCost: 850 },
+                { code: 'RU', name: 'Russia', livingCost: 600 },
                 { code: 'SG', name: 'Singapore', livingCost: 1400 },
-                { code: 'RU', name: 'Russia', livingCost: 600 }
+                { code: 'ES', name: 'Spain', livingCost: 900 },
+                { code: 'SE', name: 'Sweden', livingCost: 1200 },
+                { code: 'CH', name: 'Switzerland', livingCost: 1600 },
+                { code: 'UK', name: 'United Kingdom', livingCost: 1400 },
+                { code: 'US', name: 'United States', livingCost: 1500 }
             ];
             
             // Programs database (80-100 common graduate programs)
